--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: csharp
-os: linux		
-dist: trusty		
+os: linux
+dist: trusty
 sudo: required
 dotnet: 1.0.0-preview2-1-003177
 install:
 - dotnet restore
+solution: "./Trappist/Trappist.sln"
 before_script:
-solution: ""
 notifications:
   email:
     on_success: change
     on_failure: always
+script:
+  dotnet build ../../src/**/project.json --configuration Release
