changed yml solution path

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ notifications:
     on_success: change
     on_failure: always
 script:
-  dotnet build ../../src/**/project.json --configuration Release
+- dotnet build ./Trappist/src/Promact.Trappist.Web -c Release
+- cd ./Trappist/src/Promact.Trappist.Web && npm install
