removed webpack, added systemjs, added angular basic structure, added sass gulp task

--- a/.gitignore
+++ b/.gitignore
@@ -252,8 +252,7 @@ paket-files/
 *.sln.iml
 
 _references.js
-**/ClientApp/**/*.js
-**/ClientApp/**/*.js.map
+**/wwwroot/app/**/*.js
+**/wwwroot/app/**/*.js.map
 
-**/wwwroot/dist/*.*
-!**/wwwroot/dist/_placeholder.txt
+**/wwwroot/css/*.css
