--- a/Trappist/src/Promact.Trappist.Web/project.json
+++ b/Trappist/src/Promact.Trappist.Web/project.json
@@ -7,7 +7,6 @@
       "type": "platform"
     },
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
-    "Microsoft.AspNetCore.AngularServices": "1.0.0-*",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0",
@@ -92,12 +91,8 @@
   },
 
   "scripts": {
-    "postcompile": [ "node node_modules/webpack/bin/webpack.js --config webpack.config.vendor.js" ],
-
     "prepublish": [
-      "npm install",
-      "node node_modules/webpack/bin/webpack.js --config webpack.config.vendor.js --env.prod",
-      "node node_modules/webpack/bin/webpack.js --env.prod"
+      "npm install"
     ],
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   }
