--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -2,42 +2,23 @@
   "name": "Trappist",
   "version": "1.0.0",
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/platform-server": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@types/node": "^6.0.38",
-    "angular2-platform-node": "~2.0.10",
-    "angular2-universal": "~2.0.10",
-    "angular2-universal-polyfills": "~2.0.10",
-    "aspnet-prerendering": "^1.0.6",
-    "aspnet-webpack": "^1.0.11",
-    "bootstrap": "^3.3.7",
-    "css": "^2.2.1",
-    "css-loader": "^0.25.0",
-    "es6-shim": "^0.35.1",
-    "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jquery": "^2.2.1",
-    "preboot": "^4.5.2",
-    "raw-loader": "^0.5.1",
-    "rxjs": "5.0.0-beta.12",
-    "style-loader": "^0.13.0",
-    "to-string-loader": "^1.1.5",
-    "ts-loader": "^0.8.2",
-    "typescript": "^2.0.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "webpack-externals-plugin": "^1.0.0",
-    "webpack-hot-middleware": "^2.10.0",
-    "webpack-merge": "^0.14.1",
-    "zone.js": "^0.6.21"
+    "@angular/common": "~2.4.0",
+    "@angular/compiler": "~2.4.0",
+    "@angular/core": "~2.4.0",
+    "@angular/forms": "~2.4.0",
+    "@angular/http": "~2.4.0",
+    "@angular/material": "^2.0.0-beta.2",
+    "@angular/platform-browser": "~2.4.0",
+    "@angular/platform-browser-dynamic": "~2.4.0",
+    "@angular/router": "~3.4.0",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.1",
+    "systemjs": "0.19.40",
+    "zone.js": "^0.7.4"
+  },
+  "devDependencies": {
+    "@types/node": "^7.0.5",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0"
   }
 }
