--- a/Trappist/src/Promact.Trappist.Web/project.json
+++ b/Trappist/src/Promact.Trappist.Web/project.json
@@ -46,7 +46,8 @@
       "type": "build"
     },
     "Promact.Trappist.Core": "1.0.0-*",
-    "Promact.Trappist.Repository": "1.0.0-*"
+    "Promact.Trappist.Repository": "1.0.0-*",
+    "Microsoft.AspNetCore.SpaServices": "1.0.0-beta-000021"
   },
 
   "tools": {
