--- a/Trappist/src/Promact.Trappist.Web/appsettings.json
+++ b/Trappist/src/Promact.Trappist.Web/appsettings.json
@@ -3,7 +3,7 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Promact.Trappist.Web-c7bf096e-d957-474a-b495-cb046109e062;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Trappist;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
