--- a/Trappist/src/Promact.Trappist.Web/project.json
+++ b/Trappist/src/Promact.Trappist.Web/project.json
@@ -47,7 +47,9 @@
     },
     "Promact.Trappist.Core": "1.0.0-*",
     "Promact.Trappist.Repository": "1.0.0-*",
-    "Microsoft.AspNetCore.SpaServices": "1.0.0-beta-000021"
+    "Microsoft.AspNetCore.SpaServices": "1.0.0-beta-000021",
+    "Promact.Trappist.Utility": "1.0.0-*",
+    "Promact.Trappist.DomainModel": "1.0.0-*"
   },
 
   "tools": {
