--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/node": "^7.0.5",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "typescript": "2.2.1"
   }
 }
