Added tsc and sass task in package.json

--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -21,5 +21,9 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "typescript": "2.2.1"
+  },
+  "scripts": {
+    "tsc": "cd wwwroot && tsc",
+    "sass": "gulp sass"
   }
 }
