account controller updated

--- a/Trappist/src/Promact.Trappist.Repository/project.json
+++ b/Trappist/src/Promact.Trappist.Repository/project.json
@@ -3,7 +3,11 @@
 
   "dependencies": {
     "NETStandard.Library": "1.6.0",
-    "Promact.Trappist.DomainModel": "1.0.0-*"
+    "Promact.Trappist.DomainModel": "1.0.0-*",
+    "System.Collections.Immutable": "1.3.0",
+    "System.Interactive.Async": "3.0.0",
+    "System.Linq.Parallel": "4.3.0",
+    "System.Linq.Queryable": "4.3.0"
   },
 
   "frameworks": {
