--- a/Trappist/src/Promact.Trappist.Web/project.json
+++ b/Trappist/src/Promact.Trappist.Web/project.json
@@ -49,7 +49,8 @@
     "Promact.Trappist.Repository": "1.0.0-*",
     "Microsoft.AspNetCore.SpaServices": "1.0.0-beta-000021",
     "Promact.Trappist.Utility": "1.0.0-*",
-    "Promact.Trappist.DomainModel": "1.0.0-*"
+    "Promact.Trappist.DomainModel": "1.0.0-*",
+    "NLog.Extensions.Logging": "1.0.0-rtm-beta4"
   },
 
   "tools": {
