--- a/Trappist/src/Promact.Trappist.Web/nlog.config
+++ b/Trappist/src/Promact.Trappist.Web/nlog.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <targets>
-    <target name="logfile" xsi:type="File" fileName="nlog-${shortdate}.log" />
+    <target name="logfile" xsi:type="File" fileName="nlog.log" />
   </targets>
 
   <rules>
