--- a/Trappist/src/Promact.Trappist.Core/project.json
+++ b/Trappist/src/Promact.Trappist.Core/project.json
@@ -1,10 +1,11 @@
-﻿{
+{
   "version": "1.0.0-*",
 
   "dependencies": {
     "NETStandard.Library": "1.6.0",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
-    "Promact.Trappist.Repository": "1.0.0-*"
+    "Promact.Trappist.Repository": "1.0.0-*",
+    "Newtonsoft.Json": "9.0.1"
   },
 
   "frameworks": {
