--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ services:
 install:
   - dotnet restore ./Trappist/src
 script:
+  - cd ./Trappist/src/Promact.Trappist.Web
   - dotnet ef --version
   - dotnet ef migrations add production
+  - cd ../../../
   - dotnet build ./Trappist/src/Promact.Trappist.Web
 deploy:
   - provider: script
