--- a/Trappist/src/Promact.Trappist.Repository/project.json
+++ b/Trappist/src/Promact.Trappist.Repository/project.json
@@ -1,6 +1,4 @@
 {
-  "version": "1.0.0-*",
-
   "dependencies": {
     "NETStandard.Library": "1.6.0",
     "Promact.Trappist.DomainModel": "1.0.0-*",
@@ -9,10 +7,10 @@
     "System.Linq.Parallel": "4.3.0",
     "System.Linq.Queryable": "4.3.0"
   },
-
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50"
     }
-  }
+  },
+  "version": "1.0.0-*"
 }
