--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: csharp
 dist: trusty
 os: linux
+sudo: required
 mono: none
 dotnet: 1.0.0-preview2-1-003177
 services:
   - docker
+before_install:
+  - sudo apt-get install dotnet-sharedframework-microsoft.netcore.app-1.0.0
+  - sudo apt-get install dotnet-sharedframework-microsoft.netcore.app-1.0.1
 install:
   - dotnet restore ./Trappist/src
 script:
