updated travis yml to build test and run test

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ install:
   - dotnet restore ./Trappist/src
 script:
   - dotnet build ./Trappist/src/Promact.Trappist.Web
+  - dotnet build ./Trappist/src/Promact.Trappist.Test
+  - dotnet test
 deploy:
   - provider: script
     script: chmod +x $TRAVIS_BUILD_DIR/deploy.sh && sh $TRAVIS_BUILD_DIR/deploy.sh
