change test project path to run test

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 script:
   - dotnet build ./Trappist/src/Promact.Trappist.Web
   - dotnet build ./Trappist/src/Promact.Trappist.Test
-  - dotnet test
+  - cd Trappist/src/Promact.Trappist.Test && dotnet test && cd ../../..
 deploy:
   - provider: script
     script: chmod +x $TRAVIS_BUILD_DIR/deploy.sh && sh $TRAVIS_BUILD_DIR/deploy.sh
