--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -12,11 +12,13 @@
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
     "angular2-wizard": "^0.3.0",
+    "clipboard": "^1.6.1",
     "core-js": "^2.4.1",
     "gulp-concat": "^2.6.1",
     "gulp-inline-ng2-template": "^4.0.0",
     "gulp-typescript": "^3.1.5",
     "gulp-uglify": "^2.1.0",
+    "ngx-clipboard": "^3.0.7",
     "run-sequence": "^1.2.2",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
