--- a/Trappist/src/Promact.Trappist.DomainModel/Promact.Trappist.DomainModel.csproj
+++ b/Trappist/src/Promact.Trappist.DomainModel/Promact.Trappist.DomainModel.csproj
@@ -12,6 +12,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
+    <PackageReference Include="System.IO" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Promact.Trappist.Utility\Promact.Trappist.Utility.csproj" />
   </ItemGroup>
 
 </Project>
