--- a/Trappist/src/Promact.Trappist.Web/Promact.Trappist.Web.csproj
+++ b/Trappist/src/Promact.Trappist.Web/Promact.Trappist.Web.csproj
@@ -47,15 +47,18 @@
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.3.1" />
   </ItemGroup>
 
-  <Target Name="AddGeneratedContentItems" BeforeTargets="AssignTargetPaths" DependsOnTargets="PrepareForPublish">
-    <ItemGroup>
-      <Content Include="wwwroot/dist/**" CopyToPublishDirectory="PreserveNewest" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
-    </ItemGroup>
-  </Target>
-
-  <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
+  <Target Name="RunGulp" AfterTargets="ComputeFilesToPublish">
     <Exec Command="npm install" />
     <Exec Command="npm run prod" />
+
+    <!-- Include the newly-built files in the publish output -->
+    <ItemGroup>
+      <DistFiles Include="wwwroot\dist\**" />
+      <ResolvedFileToPublish Include="@(DistFiles->'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
+        <RelativePath>%(DistFiles.Identity)</RelativePath>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </ResolvedFileToPublish>
+    </ItemGroup>
   </Target>
 
   <ItemGroup>
