--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -27,12 +27,16 @@
   },
   "devDependencies": {
     "@types/node": "^7.0.5",
+    "codelyzer": "^2.0.0-beta.4",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
+    "gulp-tslint": "^7.1.0",
     "systemjs-builder": "^0.16.3",
+    "tslint": "^4.0.0",
     "typescript": "2.2.1"
   },
   "scripts": {
+    "lint": "gulp lint",
     "prod": "gulp prod"
   }
 }
