--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -31,12 +31,24 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "gulp-tslint": "^7.1.0",
+    "karma": "1.5.0",
+    "istanbul": "0.4.5",
+    "jasmine": "2.5.2",
+    "jasmine-core": "2.5.2",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-cli": "1.0.1",
+    "karma-coverage": "1.1.1",
+    "karma-coveralls": "1.1.2",
+    "karma-html-detailed-reporter": "1.1.11",
+    "karma-jasmine": "1.0.2",
     "systemjs-builder": "^0.16.3",
     "tslint": "^4.0.0",
     "typescript": "2.2.1"
   },
   "scripts": {
     "lint": "gulp lint",
-    "prod": "gulp prod"
+    "prod": "gulp prod",
+    "test": "karma start karma.conf.js",
+    "citest": "karma start karma.conf.ci.js"
   }
 }
