--- a/Trappist/src/Promact.Trappist.Web/wwwroot/tsconfig.json
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/tsconfig.json
@@ -7,7 +7,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true
   },
   "compileOnSave": true
