--- a/Trappist/src/Promact.Trappist.Web/Promact.Trappist.Web.csproj
+++ b/Trappist/src/Promact.Trappist.Web/Promact.Trappist.Web.csproj
@@ -28,6 +28,18 @@
   </ItemGroup>-->
 
   <ItemGroup>
+    <Content Include="wwwroot\app\questions\code-snippet.ts" />
+    <Content Include="wwwroot\app\questions\code.snippet.model.ts" />
+    <Content Include="wwwroot\app\questions\question.ts" />
+    <Content Include="wwwroot\app\questions\single-multiple-answer-question-option.model.js" />
+    <Content Include="wwwroot\app\questions\single-multiple-answer-question-option.model.js.map" />
+    <Content Include="wwwroot\app\questions\single-multiple-answer-question-option.model.ts" />
+    <Content Include="wwwroot\app\questions\single-mutiple-answer-question.model.js" />
+    <Content Include="wwwroot\app\questions\single-mutiple-answer-question.model.js.map" />
+    <Content Include="wwwroot\app\questions\single-mutiple-answer-question.model.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Promact.Trappist.Core\Promact.Trappist.Core.csproj" />
     <ProjectReference Include="..\Promact.Trappist.Repository\Promact.Trappist.Repository.csproj" />
     <ProjectReference Include="..\Promact.Trappist.Utility\Promact.Trappist.Utility.csproj" />
