Added dependency in email service

--- a/Trappist/src/Promact.Trappist.Repository/Promact.Trappist.Repository.csproj
+++ b/Trappist/src/Promact.Trappist.Repository/Promact.Trappist.Repository.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Promact.Trappist.DomainModel\Promact.Trappist.DomainModel.csproj" />
+    <ProjectReference Include="..\Promact.Trappist.Utility\Promact.Trappist.Utility.csproj" />
   </ItemGroup>
 
 </Project>
