--- a/Trappist/src/Promact.Trappist.Utility/Promact.Trappist.Utility.csproj
+++ b/Trappist/src/Promact.Trappist.Utility/Promact.Trappist.Utility.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="MailKit" Version="1.12.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Promact.Trappist.DomainModel\Promact.Trappist.DomainModel.csproj" />
+  </ItemGroup>
+
 </Project>
