--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -3,37 +3,38 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/http": "~2.4.0",
-    "@angular/material": "2.0.0-beta.2",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
-    "@angular/router": "~3.4.0",
+    "@angular/animations": "~4.0.0",
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/http": "~4.0.0",
+    "@angular/material": "2.0.0-beta.3",
+    "@angular/platform-browser": "~4.0.0",
+    "@angular/platform-browser-dynamic": "~4.0.0",
+    "@angular/router": "~4.0.0",
     "angular2-wizard": "^0.3.0",
     "bootstrap": "3.3.7",
     "clipboard": "^1.6.1",
     "core-js": "^2.4.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-inline-ng2-template": "^4.0.0",
-    "gulp-typescript": "^3.1.5",
-    "gulp-uglify": "^2.1.0",
-    "md2": "0.0.17",
+    "md2": "0.0.18",
     "ng2-ckeditor": "^1.1.6",
-    "ngx-clipboard": "^3.0.7",
-    "run-sequence": "^1.2.2",
+    "ngx-clipboard": "5.1.0",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
-    "zone.js": "^0.7.4"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@types/node": "^7.0.5",
     "codelyzer": "^2.0.0-beta.4",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-inline-ng2-template": "^4.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-tslint": "^7.1.0",
+    "gulp-typescript": "^3.1.5",
+    "gulp-uglify": "^2.1.0",
+    "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.16.3",
     "tslint": "^4.0.0",
     "typescript": "2.2.1"
