--- a/Trappist/src/Promact.Trappist.Web/wwwroot/tsconfig.aot.json
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/tsconfig.aot.json
@@ -1,7 +1,7 @@
 ﻿{
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
@@ -10,10 +10,18 @@
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true
   },
-  "compileOnSave": true,
-  "exclude": [
+
+  "files": [
+    "app/app.module.ts",
+    "app/setup/setup.module.ts",
+    "app/conduct/conduct.module.ts",
     "app/main.aot.ts",
     "app/main.setup.aot.ts",
     "app/main.conduct.aot.ts"
-  ]
+  ],
+
+  "angularCompilerOptions": {
+    "genDir": "aot",
+    "skipMetadataEmit": true
+  }
 }
