--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,9 @@ branches:
     - development
     - staging
     - master
+install:
+  ps: Start-FileDownload 'https://ci.appveyor.com/api/buildjobs/xj78v6dac42uob8q/artifacts/main%2Fbin%2Fzip%2Fopencover.4.6.589.zip'
+  ps: 7z.exe x main%2Fbin%2Fzip%2Fopencover.4.6.589.zip
 build:
   project: .\Trappist\Trappist.sln
   verbosity: minimal
