--- a/Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
+++ b/Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="coveralls.net" Version="0.8.0-unstable0013" />
+    <PackageReference Include="coveralls.net" Version="0.7.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="OpenCover" Version="4.6.519" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-beta1-build1309" />
