ngc npm task with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
   - dotnet build ./Trappist/Trappist.sln
   - dotnet test Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
   - npm run lint --prefix ./Trappist/src/Promact.Trappist.Web
+  - npm run ngc --prefix ./Trappist/src/Promact.Trappist.Web
 deploy:
   - provider: script
     script: chmod +x $TRAVIS_BUILD_DIR/deploy.sh && sh $TRAVIS_BUILD_DIR/deploy.sh
