--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,12 +12,12 @@ branches:
     - development
     - staging
     - master
-install:
-  ps: cd .\Trappist\src\Promact.Trappist.Test; Start-FileDownload 'https://ci.appveyor.com/api/buildjobs/xj78v6dac42uob8q/artifacts/main%2Fbin%2Fzip%2Fopencover.4.6.589.zip'; 7z.exe x main%2Fbin%2Fzip%2Fopencover.4.6.589.zip
 build:
   project: .\Trappist\Trappist.sln
   verbosity: minimal
 test_script:
+- ps: >-
+   cd .\Trappist\src\Promact.Trappist.Test; Start-FileDownload 'https://ci.appveyor.com/api/buildjobs/xj78v6dac42uob8q/artifacts/main%2Fbin%2Fzip%2Fopencover.4.6.589.zip'; 7z.exe x main%2Fbin%2Fzip%2Fopencover.4.6.589.zip
 - ps: >-
    .\OpenCover.Console.exe -register:user -target:"C:\Program Files\dotnet\dotnet.exe" -targetargs:"test " -filter:"+[Promact.Trappist.Repository*]*" -hideskipped:File -output:opencover.xml -oldStyle
      
