--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,6 @@ version: 1.0.{build}
 os: Visual Studio 2017
 skip_tags: true
 configuration: Debug
-build_script:
-- ps: dotnet restore ./Trappist/Trappist.sln
 environment:  
   COVERALLS_REPO_TOKEN:
   secure: oI8JLO5/25+ZMrrWdVckNz5zqUysVlU+VVMBpPxZlEXaQ/A/6z544OcIs8rVhk49
@@ -17,7 +15,7 @@ build:
   verbosity: minimal
 test_script:
 - ps: >-
-   cd .\Trappist\src\Promact.Trappist.Test; Start-FileDownload 'https://ci.appveyor.com/api/buildjobs/xj78v6dac42uob8q/artifacts/main%2Fbin%2Fzip%2Fopencover.4.6.589.zip'; 7z.exe x main%2Fbin%2Fzip%2Fopencover.4.6.589.zip
+   dotnet restore ./Trappist/Trappist.sln; cd .\Trappist\src\Promact.Trappist.Test; Start-FileDownload 'https://ci.appveyor.com/api/buildjobs/xj78v6dac42uob8q/artifacts/main%2Fbin%2Fzip%2Fopencover.4.6.589.zip'; 7z.exe x main%2Fbin%2Fzip%2Fopencover.4.6.589.zip
 - ps: >-
    .\OpenCover.Console.exe -register:user -target:"C:\Program Files\dotnet\dotnet.exe" -targetargs:"test " -filter:"+[Promact.Trappist.Repository*]*" -hideskipped:File -output:opencover.xml -oldStyle
      
