--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,14 +4,9 @@ skip_tags: true
 configuration: Debug
 build_script:
 - ps: dotnet restore ./Trappist/Trappist.sln
-environment:  
+environment:
   COVERALLS_REPO_TOKEN:
   secure: +U8RojpUoVh2Hn/hVkZ+MBV9HyZVPPiATA4WxOYQx3tIkVHQP8QLfaFmLCsCDTvJ
-branches:
-  only:
-    - development
-    - staging
-    - master
 build:
   project: .\Trappist\Trappist.sln
   verbosity: minimal
@@ -25,7 +20,7 @@ test_script:
 
    $coveralls = (Resolve-Path "C:\Users\appveyor\.nuget\packages\coveralls.net\0.8.0-unstable0013\tools\csmacnz.coveralls.exe").ToString()
    
-   & $coveralls --opencover -i opencover.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
+   & $coveralls --opencover -i opencover.xml --repoToken $env:COVERALLS_REPO_TOKEN
    }
      
 
