updated proj file

--- a/Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
+++ b/Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
@@ -5,7 +5,8 @@
     <AssemblyName>Promact.Trappist.Test</AssemblyName>
     <PackageId>Promact.Trappist.Test</PackageId>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-    <RuntimeFrameworkVersion>1.0.4</RuntimeFrameworkVersion>
+    <RuntimeFrameworkVersion>1.1.1</RuntimeFrameworkVersion>
+    <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;dnxcore50;portable-net45+win8</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
