--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -13,6 +13,7 @@
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
+    "angular2-infinite-scroll": "^0.3.5",
     "angular2-wizard-fix": "0.2.2",
     "bootstrap": "3.3.7",
     "clipboard": "^1.6.1",
