--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -16,9 +16,11 @@
     "angular2-infinite-scroll": "^0.3.5",
     "angular2-wizard-fix": "0.2.2",
     "bootstrap": "3.3.7",
+    "chart.js": "^2.5.0",
     "clipboard": "^1.6.1",
     "core-js": "^2.4.1",
     "md2": "0.0.18",
+    "ng2-charts": "^1.5.0",
     "ng2-ckeditor": "^1.1.6",
     "ngx-clipboard": "5.1.0",
     "rxjs": "5.0.1",
