--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -28,8 +28,17 @@
   "devDependencies": {
     "@angular/compiler-cli": "^4.0.2",
     "@angular/platform-server": "^4.0.2",
+    "@types/core-js": "0.9.39",
     "@types/node": "^7.0.5",
+    "angular2-template-loader": "0.6.2",
+    "awesome-typescript-loader": "3.1.2",
+    "chokidar": "1.6.1",
     "codelyzer": "^2.0.0-beta.4",
+    "concurrently": "3.4.0",
+    "copy-webpack-plugin": "4.0.1",
+    "css-loader": "0.27.3",
+    "extract-text-webpack-plugin": "2.1.0",
+    "gh-pages": "0.12.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-inline-ng2-template": "^4.0.0",
@@ -38,20 +47,39 @@
     "gulp-tslint": "^7.1.0",
     "gulp-typescript": "^3.1.5",
     "gulp-uglify": "^2.1.0",
+    "http-server": "0.9.0",
+    "node-sass": "^4.5.2",
+    "raw-loader": "0.5.1",
+    "rimraf": "2.6.1",
     "rollup": "^0.41.6",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-stream": "^1.19.0",
     "run-sequence": "^1.2.2",
+    "sass-loader": "^6.0.3",
+    "source-map-explorer": "1.3.3",
+    "style-loader": "0.16.1",
     "systemjs-builder": "^0.16.3",
+    "to-string-loader": "1.1.5",
     "tslint": "^4.0.0",
     "typescript": "2.2.1",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "2.3.2",
+    "webpack-dev-server": "2.4.2"
   },
   "scripts": {
     "lint": "gulp lint",
-    "ngc": "gulp ngc",
-    "prod": "gulp prod"
+    "cleanup": "rimraf src/app/**/*.ngfactory.ts src/app/**/*.ngstyle.ts src/app/**/*.ngsummary.json build dist",
+    "explorer": "source-map-explorer ./dist/main.bundle.js ./dist/main.bundle.js.map",
+    "ngc": "ngc",
+    "serve": "http-server ./dist -a 0.0.0.0 -p 9000",
+    "start": "npm run cleanup && npm run ngc && concurrently -r \"webpack-dev-server --config webpack.aot.config.js\" \"node ./bin/ngc-watch.js\"",
+    "start-prod": "npm run ngc && npm run build && npm run serve",
+    "build": "npm run cleanup && npm run ngc && webpack --config webpack.aot.config.js -p",
+    "build-jit": "npm run cleanup && webpack --config webpack.aot.config.js -p",
+    "deploy": "gh-pages -d dist",
+    "aot": "npm run cleanup && npm run ngc && concurrently -r \"webpack-dev-server --config webpack.aot.config.js\" \"node ./bin/ngc-watch.js\"",
+    "jit": "npm run cleanup && webpack-dev-server --config webpack.jit.config.js"
   }
 }
