Index.cshtml - changes as per webpack Conduct.cshtml - changes as per webpack Setup.cshtml - changes as per webpack webpack(folder) - contain configuration of webpack *.component.ts - added to string for module Id as webpack take module id as a number and angular 2 as string packages.json - added package for webpack ->     "@ngtools/webpack": "^1.4.1",     "aspnet-webpack": "^1.0.29"     "@types/core-js": "0.9.39",         "angular2-template-loader": "0.6.2",     "awesome-typescript-loader": "3.1.2",     "chokidar": "1.6.1",     "concurrently": "3.4.0",     "copy-webpack-plugin": "4.0.1",     "css-loader": "0.27.3",     "extract-text-webpack-plugin": "2.1.0",     "gh-pages": "0.12.0",     "http-server": "0.9.0",     "raw-loader": "0.5.1",     "rimraf": "2.6.1",     "source-map-explorer": "1.3.3",     "style-loader": "0.16.1",     "to-string-loader": "1.1.5",     "webpack": "2.3.2",     "webpack-dev-server": "2.4.2",     "webpack-hot-middleware": "^2.18.0" Startup.cs - added configuration for webpack middleware tsconfig.json - common for all wwwroot/tsconfig.json - removed wwwroot/tsconfig.aot.json - removed webpack.aot.config.js - configuration of webpack for aot webpack.jit.config.js - configuration of webpack for jit .gitignore - added build and dist
Fixes - #270

--- a/Trappist/src/Promact.Trappist.Web/Promact.Trappist.Web.csproj
+++ b/Trappist/src/Promact.Trappist.Web/Promact.Trappist.Web.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\app\polyfill.ts" />
+    <Content Include="wwwroot\app\vendor.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Promact.Trappist.Core\Promact.Trappist.Core.csproj" />
     <ProjectReference Include="..\Promact.Trappist.Repository\Promact.Trappist.Repository.csproj" />
     <ProjectReference Include="..\Promact.Trappist.Utility\Promact.Trappist.Utility.csproj" />
@@ -44,7 +49,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.0">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="1.1.1" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.3.1" />
   </ItemGroup>
 
