--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -3,31 +3,34 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~4.0.0",
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
+    "@angular/animations": "4.0.0",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
     "@angular/material": "2.0.0-beta.3",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/router": "~4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/router": "4.0.0",
     "angular2-infinite-scroll": "^0.3.5",
     "angular2-wizard-fix": "0.2.2",
     "bootstrap": "3.3.7",
     "clipboard": "^1.6.1",
-    "core-js": "^2.4.1",
+    "core-js": "2.4.1",
     "md2": "0.0.18",
     "ng2-ckeditor": "^1.1.6",
     "ngx-clipboard": "5.1.0",
-    "rxjs": "5.0.1",
+    "@ngtools/webpack": "^1.4.1",
+    "aspnet-webpack": "^1.0.29",
+    "rxjs": "5.2.0",
     "systemjs": "0.19.40",
-    "zone.js": "^0.8.4"
+    "zone.js": "0.8.5"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.2",
-    "@angular/platform-server": "^4.0.2",
+    "@angular/compiler-cli": "4.0.0",
+    "@angular/platform-server": "4.0.0",
+    "@types/core-js": "0.9.39",
     "@types/node": "^7.0.5",
     "codelyzer": "^2.0.0-beta.4",
     "gulp": "^3.9.1",
@@ -46,8 +49,25 @@
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.16.3",
     "tslint": "^4.0.0",
-    "typescript": "2.2.1",
-    "vinyl-source-stream": "^1.1.0"
+    "typescript": "2.2.2",
+    "vinyl-source-stream": "^1.1.0",
+    "angular2-template-loader": "0.6.2",
+    "awesome-typescript-loader": "3.1.2",
+    "chokidar": "1.6.1",
+    "concurrently": "3.4.0",
+    "copy-webpack-plugin": "4.0.1",
+    "css-loader": "0.27.3",
+    "extract-text-webpack-plugin": "2.1.0",
+    "gh-pages": "0.12.0",
+    "http-server": "0.9.0",
+    "raw-loader": "0.5.1",
+    "rimraf": "2.6.1",
+    "source-map-explorer": "1.3.3",
+    "style-loader": "0.16.1",
+    "to-string-loader": "1.1.5",
+    "webpack": "2.3.2",
+    "webpack-dev-server": "2.4.2",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "scripts": {
     "lint": "gulp lint",
