Conduct.cshtml - update the sequence of script reference Setup.cshtml - update the sequence of script reference Index.cshtml - update the sequence of script reference entry.aot.js - added bundle for set and conduct entry.jit.js - added bundle for set and conduct plugin.prod.js - updated the path for tsconfig of of aot main.aot.ts - updated the path of ngfactory main.setup.aot.ts - updated the path of ngfactory main.conduct.aot.ts - updated the path of ngfactory tsconfig-aot.json - tsconfig for aot tsconfig.json - update the target and added lib
Fixes - #270

--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,7 @@ _references.js
 **/aot/
 **/build
 **/dist
+**/app/*.ngfactory.ts
+**/app/*.ngsummary.json
+**/app/**/*.ngfactory.ts
+**/app/**/*.ngsummary.json
