--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -6,23 +6,25 @@
     "@angular/animations": "4.0.0",
     "@angular/common": "4.0.0",
     "@angular/compiler": "4.0.0",
+    "@angular/compiler-cli": "4.0.0",
     "@angular/core": "4.0.0",
     "@angular/forms": "4.0.0",
     "@angular/http": "4.0.0",
     "@angular/material": "2.0.0-beta.3",
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/platform-server": "4.0.0",
     "@angular/router": "4.0.0",
+    "@ngtools/webpack": "1.4.1",
     "angular2-infinite-scroll": "^0.3.5",
     "angular2-wizard-fix": "0.2.2",
+    "aspnet-webpack": "1.0.29",
     "bootstrap": "3.3.7",
     "clipboard": "^1.6.1",
     "core-js": "2.4.1",
     "md2": "0.0.18",
     "ng2-ckeditor": "^1.1.6",
     "ngx-clipboard": "5.1.0",
-    "@ngtools/webpack": "^1.4.1",
-    "aspnet-webpack": "^1.0.29",
     "rxjs": "5.2.0",
     "systemjs": "0.19.40",
     "zone.js": "0.8.5"
@@ -72,6 +74,7 @@
   "scripts": {
     "lint": "gulp lint",
     "ngc": "gulp ngc",
-    "prod": "gulp prod"
+    "prod": "gulp prod",
+    "cleanup": "rimraf wwwroot/app/**/*.ngfactory.ts wwwroot/app/**/*.ngstyle.ts wwwroot/app/**/*.ngsummary.json  wwwroot/app/*.ngfactory.ts wwwroot/app/*.ngstyle.ts wwwroot/app/*.ngsummary.json build dist"
   }
 }
