Index.cshtml - changes as per webpack webpack(folder) - contain configuration of webpack *.component.ts - added to string for module Id as webpack take module id as a number and angular 2 as string packages.json - added package for webpack ->     "@ngtools/webpack": "^1.4.1",     "aspnet-webpack": "^1.0.29"     "@types/core-js": "0.9.39",         "angular2-template-loader": "0.6.2",     "awesome-typescript-loader": "3.1.2",     "chokidar": "1.6.1",     "concurrently": "3.4.0",     "copy-webpack-plugin": "4.0.1",     "css-loader": "0.27.3",     "extract-text-webpack-plugin": "2.1.0",     "gh-pages": "0.12.0",     "http-server": "0.9.0",     "raw-loader": "0.5.1",     "rimraf": "2.6.1",     "source-map-explorer": "1.3.3",     "style-loader": "0.16.1",     "to-string-loader": "1.1.5",     "webpack": "2.3.2",     "webpack-dev-server": "2.4.2",     "webpack-hot-middleware": "^2.18.0" Startup.cs - added configuration for webpack middleware tsconfig.json - common for all wwwroot/tsconfig.json - removed wwwroot/tsconfig.aot.json - removed webpack.config.js - configuration of webpack for jit .gitignore - added build and dist
Fixes - #270

--- a/Trappist/src/Promact.Trappist.Web/tsconfig.aot.json
+++ b/Trappist/src/Promact.Trappist.Web/tsconfig.aot.json
@@ -12,12 +12,12 @@
   },
 
   "files": [
-    "app/app.module.ts",
-    "app/setup/setup.module.ts",
-    "app/conduct/conduct.module.ts",
-    "app/main.aot.ts",
-    "app/main.setup.aot.ts",
-    "app/main.conduct.aot.ts"
+    "wwwroot/app/app.module.ts",
+    "wwwroot/app/setup/setup.module.ts",
+    "wwwroot/app/conduct/conduct.module.ts",
+    "wwwroot/app/main.aot.ts",
+    "wwwroot/app/main.setup.aot.ts",
+    "wwwroot/app/main.conduct.aot.ts"
   ],
 
   "angularCompilerOptions": {
