Updated package: angular(4.3.0), angular-material(2.0.0beta8), rxjs(5.4.2) and typescript(2.4.1)

--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~4.0.0",
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/compiler-cli": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
-    "@angular/material": "2.0.0-beta.3",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/router": "~4.0.0",
+    "@angular/animations": "~4.3.0",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/common": "~4.3.0",
+    "@angular/compiler": "~4.3.0",
+    "@angular/compiler-cli": "~4.3.0",
+    "@angular/core": "~4.3.0",
+    "@angular/forms": "~4.3.0",
+    "@angular/http": "~4.3.0",
+    "@angular/material": "2.0.0-beta.8",
+    "@angular/platform-browser": "~4.3.0",
+    "@angular/platform-browser-dynamic": "~4.3.0",
+    "@angular/router": "~4.3.0",
     "angular2-infinite-scroll": "^0.3.5",
     "angular2-tinymce": "^2.1.2",
     "angular2-wizard-fix": "0.2.2",
@@ -23,14 +24,14 @@
     "md2": "0.0.18",
     "ng2-ckeditor": "^1.1.6",
     "ngx-clipboard": "5.1.0",
-    "rxjs": "5.0.1",
+    "rxjs": "5.4.2",
     "systemjs": "0.19.40",
     "tinymce": "^4.6.4",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/platform-server": "^4.0.2",
+    "@angular/compiler-cli": "^4.3.0",
+    "@angular/platform-server": "^4.3.0",
     "@types/node": "^7.0.5",
     "codelyzer": "^2.0.0-beta.4",
     "gulp": "^3.9.1",
@@ -49,7 +50,7 @@
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.16.3",
     "tslint": "^4.0.0",
-    "typescript": "2.2.1",
+    "typescript": "2.4.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
