Code base server url will now be taken from appsettings.json instead of hardcoaded string

--- a/Trappist/src/Promact.Trappist.Web/appsettings.json
+++ b/Trappist/src/Promact.Trappist.Web/appsettings.json
@@ -12,5 +12,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "CodeBaseSimulatorServer": "http://localhost:56725/api/execute"
 }
