--- a/Trappist/src/Promact.Trappist.Web/wwwroot/tsconfig.json
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/tsconfig.json
@@ -7,8 +7,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "suppressImplicitAnyIndexErrors": true
+    
   },
   "compileOnSave": true,
   "exclude": [
