Exceljs config fix

--- a/Trappist/src/Promact.Trappist.Web/appsettings.json
+++ b/Trappist/src/Promact.Trappist.Web/appsettings.json
@@ -13,5 +13,5 @@
       "Microsoft": "Information"
     }
   },
-  "CodeBaseSimulatorServer": "http://codesimulator.promactinfo.com/api/execute"
+  "CodeBaseSimulatorServer": "http://yourcodebase.server.url"
 }
