Fixed code snippet question page and added model for storing test case result

--- a/Trappist/src/Promact.Trappist.Web/appsettings.json
+++ b/Trappist/src/Promact.Trappist.Web/appsettings.json
@@ -13,5 +13,5 @@
       "Microsoft": "Information"
     }
   },
-  "CodeBaseSimulatorServer": "http://yourcodebase.server.url"
+  "CodeBaseSimulatorServer": "http://localhost:56725/api/execute"
 }
