Now onwards API key will be required to access code base server

--- a/Trappist/src/Promact.Trappist.Web/appsettings.json
+++ b/Trappist/src/Promact.Trappist.Web/appsettings.json
@@ -13,5 +13,6 @@
       "Microsoft": "Information"
     }
   },
-  "CodeBaseSimulatorServer": "http://yourcodebase.server.url"
+  "CodeBaseSimulatorServer": "http://yourcodebase.server.url",
+  "CodeBaseSimulatorServerAPIKey": ""
 }
