bug fix of test conduct, changes in error handling

--- a/Trappist/src/Promact.Trappist.Web/appsettings.json
+++ b/Trappist/src/Promact.Trappist.Web/appsettings.json
@@ -14,5 +14,6 @@
     }
   },
   "CodeBaseSimulatorServer": "http://yourcodebase.server.url",
-  "CodeBaseSimulatorServerAPIKey": ""
+  "CodeBaseSimulatorServerAPIKey": "",
+  "ExceptionlessKey": "UBU3FVySPcoPSuMUhpcC0Vaddrh29dTmMvBC9uF2"
 }
