--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,9 @@ install:
 - dotnet restore ./Trappist/Trappist.sln
 - cd ./Trappist/src/Promact.Trappist.Web && npm install && cd ../../../
 script:
-- dotnet build ./Trappist/Trappist.sln
+- dotnet build -c Release ./Trappist/Trappist.sln
 - dotnet test Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
-- npm run lint --prefix ./Trappist/src/Promact.Trappist.Web
-- npm run ngc --prefix ./Trappist/src/Promact.Trappist.Web
+- npm run prod --prefix ./Trappist/src/Promact.Trappist.Web
 deploy:
 - provider: script
   script: chmod +x $TRAVIS_BUILD_DIR/deploy.sh && sh $TRAVIS_BUILD_DIR/deploy.sh
