--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -7,7 +7,6 @@
     "@angular/cdk": "2.0.0-beta.8",
     "@angular/common": "~4.3.0",
     "@angular/compiler": "~4.3.0",
-    "@angular/compiler-cli": "~4.3.0",
     "@angular/core": "~4.3.0",
     "@angular/forms": "~4.3.0",
     "@angular/http": "~4.3.0",
@@ -23,19 +22,25 @@
     "chart.js": "2.5.0",
     "clipboard": "^1.6.1",
     "core-js": "^2.4.1",
+    "event-source-polyfill": "0.0.9",
     "exceljs": "^0.5.1",
     "file-saver": "^1.3.3",
     "ieee754": "^1.1.8",
+    "isomorphic-fetch": "2.2.1",
+    "json-loader": "0.5.4",
     "jspdf": "^1.3.3",
     "jspdf-autotable": "^2.3.2",
     "md2": "0.0.18",
     "ng2-ace-editor": "^0.2.3",
     "ng2-charts": "1.5.0",
     "ng2-ckeditor": "^1.1.6",
-    "ngx-clipboard": "5.1.0",
+    "ngx-clipboard": "8.1.0",
     "ngx-popover": "0.0.16",
+    "node-sass": "^4.5.3",
     "rxjs": "5.4.2",
+    "sass-loader": "^6.0.6",
     "screenfull": "^3.3.1",
+    "style-loader": "0.18.2",
     "systemjs": "0.19.40",
     "tinymce": "^4.6.4",
     "zone.js": "^0.8.4"
@@ -43,9 +48,19 @@
   "devDependencies": {
     "@angular/compiler-cli": "^4.3.0",
     "@angular/platform-server": "^4.3.0",
+    "@ngtools/webpack": "1.7.2",
     "@types/node": "^7.0.5",
+    "@types/webpack-env": "^1.13.0",
+    "angular2-template-loader": "0.6.2",
     "angular2-tinymce": "^2.1.2",
+    "aspnet-webpack": "^2.0.1",
+    "awesome-typescript-loader": "3.2.1",
     "codelyzer": "^2.0.0-beta.4",
+    "css": "2.2.1",
+    "css-loader": "0.28.4",
+    "expose-loader": "0.7.3",
+    "extract-text-webpack-plugin": "2.1.2",
+    "file-loader": "0.11.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-inline-ng2-template": "^4.0.0",
@@ -54,6 +69,8 @@
     "gulp-tslint": "^7.1.0",
     "gulp-typescript": "^3.1.5",
     "gulp-uglify": "^2.1.0",
+    "html-loader": "0.4.5",
+    "raw-loader": "0.5.1",
     "rollup": "^0.41.6",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
@@ -63,11 +80,16 @@
     "systemjs-builder": "^0.16.3",
     "tslint": "^4.0.0",
     "typescript": "2.4.1",
-    "vinyl-source-stream": "^1.1.0"
+    "to-string-loader": "1.1.5",
+    "url-loader": "0.5.9",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "2.7.0",
+    "webpack-hot-middleware": "2.18.2",
+    "webpack-merge": "4.1.0"
   },
   "scripts": {
     "lint": "gulp lint",
-    "ngc": "gulp ngc",
-    "prod": "gulp prod"
+    "dev": "webpack --config webpack.config.vendor.js && webpack",
+    "prod": "webpack --config webpack.config.vendor.js --env.prod --progress && webpack --progress --env.prod"
   }
 }
