--- a/Trappist/src/Promact.Trappist.Web/wwwroot/tsconfig.json
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/tsconfig.json
@@ -1,17 +1,16 @@
 ﻿{
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [ "es2015", "dom" ],
     "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": true
-    
+    "suppressImplicitAnyIndexErrors": true,
+	"typeRoots": [ "../node_modules/@types" ]
   },
-  "compileOnSave": true,
   "exclude": [
     "app/main.aot.ts",
     "app/main.setup.aot.ts",
