--- a/Trappist/src/Promact.Trappist.Web/appsettings.json
+++ b/Trappist/src/Promact.Trappist.Web/appsettings.json
@@ -10,6 +10,19 @@
       "Microsoft": "Information"
     }
   },
+  "Serilog": {
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "RollingFile",
+        "Args": { "pathFormat": "logs/log-{Date}.txt" } 
+      }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "Trappist"
+    }
+  },
   "CodeBaseSimulatorServer": "http://yourcodebase.server.url",
   "CodeBaseSimulatorServerAPIKey": "",
   "ExceptionlessKey": "UBU3FVySPcoPSuMUhpcC0Vaddrh29dTmMvBC9uF2"
