changed report repository and test.component.ts

--- a/Trappist/src/Promact.Trappist.Web/appsettings.json
+++ b/Trappist/src/Promact.Trappist.Web/appsettings.json
@@ -10,8 +10,8 @@
       "Microsoft": "Information"
     }
   },
-  "CodeBaseSimulatorServer": "http://codesimulator.promactinfo.com/api/execute",
-  "CodeBaseSimulatorServerAPIKey": "codeserver-ZDD5yjGViNaGBHxnRvT3fIUShjPvX3qr",
+  "CodeBaseSimulatorServer": "",
+  "CodeBaseSimulatorServerAPIKey": "",
   "ExceptionlessKey": "",
   "LogstashIP": ""
 }
